--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,26 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Schpoop</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="select_template">Select template</string>
+    <string name="meme_hint_top_text">Top text</string>
+    <string name="meme_hint_bottom_text">Bottom text</string>
+    <string name="meme_title">Title</string>
+    <string name="meme_create">Create meme</string>
+    <string name="template_image_from_gallery">Image from gallery</string>
+    <string name="template_image_from_camera">Image from camera</string>
+    <string name="template_title">Title</string>
+    <string name="template_create">Create template</string>
+    <string name="sign_up_button">Register</string>
+    <string name="sign_up_completion_message">Registered!</string>
+    <string name="username_hint">Username</string>
+    <string name="password_hint">Password</string>
+    <string name="signed_in_completion_text">Signed in!</string>
+    <string name="sign_in_button">Sign In</string>
+    <string name="nav_home">Home</string>
+    <string name="nav_template">Template</string>
+    <string name="nav_create_meme">Create meme</string>
+    <string name="nav_profile">Profile</string>
+    <string name="nav_sign_in">Sign in</string>
+    <string name="nav_sign_up">Register</string>
 </resources>
