--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="nav_sign_in">Sign in</string>
     <string name="nav_sign_up">Register</string>
     <string name="nav_sign_out">Sign out</string>
+    <string name="meme_unable_to_create">Unable to create meme...</string>
 </resources>
