Upload does not work on templates yet.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="no_file_access">Acess to file system is required</string>
     <string name="external_storage_explaination">Please allow External Storage permission in App Settings.</string>
     <string name="meme_unable_to_create">Unable to create meme...</string>
+    <string name="meme_template_unable_to_create">Unable to create meme template...</string>
 </resources>
