--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -24,4 +24,5 @@
     <string name="nav_sign_up">Registrera dig</string>
     <string name="nav_sign_out">Logga ut</string>
     <string name="meme_unable_to_create">Det gick inte att skapa mejmejn...</string>
+    <string name="meme_template_unable_to_create">Det gick inte att skapa mallen för mejmejs...</string>
 </resources>
