--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -25,4 +25,14 @@
     <string name="nav_sign_out">Logga ut</string>
     <string name="meme_unable_to_create">Det gick inte att skapa mejmejn...</string>
     <string name="meme_template_unable_to_create">Det gick inte att skapa mallen för mejmejs...</string>
+    <string name="downvote_btn_text">▼</string>
+    <string name="create_template">Skapa mall</string>
+    <string name="no_file_access">Tillgång till file system krävs</string>
+    <string name="external_storage_explaination">Var vänlig och tillåt extern lagring i app inställningar</string>
+    <string name="permission_granted_local_drive">" Tillstånd beviljad, Nu kan du använda lokal enhet."</string>
+    <string name="permision_denied_local_drive">" Tillstånd nekats, Nu kan du inte använda lokal enhet."</string>
+    <string name="meme_description">Mem</string>
+    <string name="author_default_text">Författare</string>
+    <string name="nav_create_template">Skapa mall</string>
+    <string name="upvote_btn_text">▲</string>
 </resources>
