--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,9 @@
     <string name="author_default_text">Author</string>
     <string name="upvote_btn_text">▲</string>
     <string name="downvote_btn_text">▼</string>
+    <string name="remove">Remove</string>
+    <string name="remove_meme">Remove meme</string>
+    <string name="remove_meme_message">Are you sure you want to remove this meme?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
